# LibtorchDetection

./: .gitignore  CMakeLists.txt
include/: detection.h
model/: CMakeLists.txt
model/include/: processing.h
model/src/: processing.cpp
src/: CMakeLists.txt  detection.cpp
v4l2lib/: CMakeLists.txt
